--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+Data/
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,flask
 
