--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ Data/
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
+Frontend/cache-directory/
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,flask
 
